tests/NormalTests/paczka1/fuzzy1/88110874.err
Error in line 2: qAV A456 40,4
Error in line 5: qAV S556 99,0
Error in line 4: CuLx S556 14,7
Error in line 16: Kppim A456 50,7
Error in line 30: Kpp¦m S556 79,8
Error in line 21: CuLx A456 5,6
Error in line 33: Boc A161 58,0
Error in line 29: A456 S156 62,0
